--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
   z-index: 0;
   width: 340px;
   height: 340px;
-  margin-left: auto; 
+  margin-left: auto;
   margin-right: auto;
   background: center / contain no-repeat url(https://i.ibb.co/x50pkF8/vagina-pngrepo-com.png);
 }
+
 .penis {
   z-index: 10;
   background: #ffbec2;
@@ -15,6 +16,7 @@
   margin: 0 auto;
   margin-top: -162px;
 }
+
 .egg {
   z-index: 11;
   background: #ffbec2;
@@ -26,8 +28,17 @@
   display: inline-block;
   margin-top: -50px;
 }
+
 .balls {
   width: 221px;
   margin: 0 auto;
   padding-top: -50px;
+}
+
+#Dick {
+  left: 0;
+  right: 0 ;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
 }
